--- a/pubmedLoader.ipynb
+++ b/pubmedLoader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -10,53 +10,27 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting datasets\n",
-      "  Downloading datasets-2.13.1-py3-none-any.whl (486 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m486.2/486.2 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.17 in /home/max/.local/lib/python3.11/site-packages (from datasets) (1.24.3)\n",
+      "Requirement already satisfied: datasets in /home/max/.local/lib/python3.11/site-packages (2.13.1)\n",
+      "Requirement already satisfied: numpy>=1.17 in /home/max/.local/lib/python3.11/site-packages (from datasets) (1.24.3)\n",
       "Requirement already satisfied: pyarrow>=8.0.0 in /home/max/.local/lib/python3.11/site-packages (from datasets) (12.0.0)\n",
-      "Collecting dill<0.3.7,>=0.3.0 (from datasets)\n",
-      "  Downloading dill-0.3.6-py3-none-any.whl (110 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m110.5/110.5 kB\u001b[0m \u001b[31m17.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: pandas in /home/max/.local/lib/python3.11/site-packages (from datasets) (1.5.3)\n",
+      "Requirement already satisfied: dill<0.3.7,>=0.3.0 in /home/max/.local/lib/python3.11/site-packages (from datasets) (0.3.6)\n",
+      "Requirement already satisfied: pandas in /home/max/.local/lib/python3.11/site-packages (from datasets) (1.5.3)\n",
       "Requirement already satisfied: requests>=2.19.0 in /usr/lib/python3.11/site-packages (from datasets) (2.28.2)\n",
       "Requirement already satisfied: tqdm>=4.62.1 in /usr/lib/python3.11/site-packages (from datasets) (4.65.0)\n",
-      "Collecting xxhash (from datasets)\n",
-      "  Downloading xxhash-3.2.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (213 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m213.2/213.2 kB\u001b[0m \u001b[31m9.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting multiprocess (from datasets)\n",
-      "  Downloading multiprocess-0.70.14-py310-none-any.whl (134 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m134.3/134.3 kB\u001b[0m \u001b[31m10.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting fsspec[http]>=2021.11.1 (from datasets)\n",
-      "  Downloading fsspec-2023.6.0-py3-none-any.whl (163 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m163.8/163.8 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting aiohttp (from datasets)\n",
-      "  Downloading aiohttp-3.8.4-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.0 MB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m6.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m:01\u001b[0m\n",
-      "\u001b[?25hCollecting huggingface-hub<1.0.0,>=0.11.0 (from datasets)\n",
-      "  Downloading huggingface_hub-0.15.1-py3-none-any.whl (236 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m236.8/236.8 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: packaging in /usr/lib/python3.11/site-packages (from datasets) (23.1)\n",
-      "Collecting pyyaml>=5.1 (from datasets)\n",
-      "  Downloading PyYAML-6.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (757 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m757.9/757.9 kB\u001b[0m \u001b[31m5.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m0:01\u001b[0m:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: attrs>=17.3.0 in /usr/lib/python3.11/site-packages (from aiohttp->datasets) (22.2.0)\n",
-      "Collecting charset-normalizer<4.0,>=2.0 (from aiohttp->datasets)\n",
-      "  Downloading charset_normalizer-3.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (197 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m197.3/197.3 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting multidict<7.0,>=4.5 (from aiohttp->datasets)\n",
-      "  Downloading multidict-6.0.4-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (117 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m117.4/117.4 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting async-timeout<5.0,>=4.0.0a3 (from aiohttp->datasets)\n",
-      "  Using cached async_timeout-4.0.2-py3-none-any.whl (5.8 kB)\n",
-      "Collecting yarl<2.0,>=1.0 (from aiohttp->datasets)\n",
-      "  Downloading yarl-1.9.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (282 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m282.8/282.8 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[36m0:00:01\u001b[0mm eta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting frozenlist>=1.1.1 (from aiohttp->datasets)\n",
-      "  Downloading frozenlist-1.3.3-cp311-cp311-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (154 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.3/154.3 kB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting aiosignal>=1.1.2 (from aiohttp->datasets)\n",
-      "  Using cached aiosignal-1.3.1-py3-none-any.whl (7.6 kB)\n",
+      "Requirement already satisfied: xxhash in /home/max/.local/lib/python3.11/site-packages (from datasets) (3.2.0)\n",
+      "Requirement already satisfied: multiprocess in /home/max/.local/lib/python3.11/site-packages (from datasets) (0.70.14)\n",
+      "Requirement already satisfied: fsspec[http]>=2021.11.1 in /home/max/.local/lib/python3.11/site-packages (from datasets) (2023.6.0)\n",
+      "Requirement already satisfied: aiohttp in /home/max/.local/lib/python3.11/site-packages (from datasets) (3.8.4)\n",
+      "Requirement already satisfied: huggingface-hub<1.0.0,>=0.11.0 in /home/max/.local/lib/python3.11/site-packages (from datasets) (0.15.1)\n",
+      "Requirement already satisfied: packaging in /usr/lib/python3.11/site-packages (from datasets) (23.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /home/max/.local/lib/python3.11/site-packages (from datasets) (6.0)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /usr/lib/python3.11/site-packages (from aiohttp->datasets) (22.2.0)\n",
+      "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /home/max/.local/lib/python3.11/site-packages (from aiohttp->datasets) (3.1.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /home/max/.local/lib/python3.11/site-packages (from aiohttp->datasets) (6.0.4)\n",
+      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /home/max/.local/lib/python3.11/site-packages (from aiohttp->datasets) (4.0.2)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /home/max/.local/lib/python3.11/site-packages (from aiohttp->datasets) (1.9.2)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /home/max/.local/lib/python3.11/site-packages (from aiohttp->datasets) (1.3.3)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /home/max/.local/lib/python3.11/site-packages (from aiohttp->datasets) (1.3.1)\n",
       "Requirement already satisfied: filelock in /home/max/.local/lib/python3.11/site-packages (from huggingface-hub<1.0.0,>=0.11.0->datasets) (3.12.0)\n",
       "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/lib/python3.11/site-packages (from huggingface-hub<1.0.0,>=0.11.0->datasets) (4.6.3)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /usr/lib/python3.11/site-packages (from requests>=2.19.0->datasets) (3.4)\n",
@@ -64,14 +38,38 @@
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/max/.local/lib/python3.11/site-packages (from pandas->datasets) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /home/max/.local/lib/python3.11/site-packages (from pandas->datasets) (2023.3)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3.11/site-packages (from python-dateutil>=2.8.1->pandas->datasets) (1.16.0)\n",
-      "Installing collected packages: xxhash, pyyaml, multidict, fsspec, frozenlist, dill, charset-normalizer, async-timeout, yarl, multiprocess, huggingface-hub, aiosignal, aiohttp, datasets\n",
-      "Successfully installed aiohttp-3.8.4 aiosignal-1.3.1 async-timeout-4.0.2 charset-normalizer-3.1.0 datasets-2.13.1 dill-0.3.6 frozenlist-1.3.3 fsspec-2023.6.0 huggingface-hub-0.15.1 multidict-6.0.4 multiprocess-0.70.14 pyyaml-6.0 xxhash-3.2.0 yarl-1.9.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: transformers in /home/max/.local/lib/python3.11/site-packages (4.30.2)\n",
+      "Requirement already satisfied: filelock in /home/max/.local/lib/python3.11/site-packages (from transformers) (3.12.0)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.14.1 in /home/max/.local/lib/python3.11/site-packages (from transformers) (0.15.1)\n",
+      "Requirement already satisfied: numpy>=1.17 in /home/max/.local/lib/python3.11/site-packages (from transformers) (1.24.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in /usr/lib/python3.11/site-packages (from transformers) (23.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /home/max/.local/lib/python3.11/site-packages (from transformers) (6.0)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /home/max/.local/lib/python3.11/site-packages (from transformers) (2023.6.3)\n",
+      "Requirement already satisfied: requests in /usr/lib/python3.11/site-packages (from transformers) (2.28.2)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /home/max/.local/lib/python3.11/site-packages (from transformers) (0.13.3)\n",
+      "Requirement already satisfied: safetensors>=0.3.1 in /home/max/.local/lib/python3.11/site-packages (from transformers) (0.3.1)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /usr/lib/python3.11/site-packages (from transformers) (4.65.0)\n",
+      "Requirement already satisfied: fsspec in /home/max/.local/lib/python3.11/site-packages (from huggingface-hub<1.0,>=0.14.1->transformers) (2023.6.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/lib/python3.11/site-packages (from huggingface-hub<1.0,>=0.14.1->transformers) (4.6.3)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /usr/lib/python3.11/site-packages (from requests->transformers) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/lib/python3.11/site-packages (from requests->transformers) (1.26.15)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting einops\n",
+      "  Downloading einops-0.6.1-py3-none-any.whl (42 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.2/42.2 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: einops\n",
+      "Successfully installed einops-0.6.1\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install datasets"
+    "%pip install datasets\n",
+    "%pip install transformers\n",
+    "%pip install einops"
    ]
   },
   {
@@ -174,6 +172,37 @@
     "# Save the formatted dataset to a file\n",
     "with open('qlora_dataset.json', 'w') as f:\n",
     "    json.dump(qlora_formatted_dataset, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instantiating an MPTForCausalLM model from /home/max/.cache/huggingface/modules/transformers_modules/mosaicml/mpt-7b/72e5f594ce36f9cabfa2a9fd8f58b491eb467ee7/modeling_mpt.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Load the model\n",
+    "import torch\n",
+    "import transformers\n",
+    "\n",
+    "name = 'mosaicml/mpt-7b'\n",
+    "\n",
+    "config = transformers.AutoConfig.from_pretrained(name, trust_remote_code=True)\n",
+    "config.attn_config['attn_impl'] = 'triton'\n",
+    "\n",
+    "model = transformers.AutoModelForCausalLM.from_pretrained(\n",
+    "  name,\n",
+    "  config=config,\n",
+    "  torch_dtype=torch.bfloat16, # Load model weights in bfloat16\n",
+    "  trust_remote_code=True\n",
+    ")"
    ]
   }
  ],
